--- a/model_summary.qmd
+++ b/model_summary.qmd
@@ -51,7 +51,7 @@ An additional level models the parameters of the negative exponential curve as a
 
 These parameters represent the relationship of the following environmental variables to the recovery trajectory.
 
-```{r p1, echo=F, eval=TRUE, warning=F, message=FALSE}
+```{r p1, echo=F, eval=FALSE, warning=F, message=FALSE}
 betas=model_results %>% 
   filter(type=="beta")
 
@@ -71,7 +71,7 @@ ggplotly(p1)
 
 The plot below illustrates some example recovery trajectories. It currently just shows the top 20 cells with the most observations.
 
-```{r plot, echo=F, eval=TRUE, message=FALSE,fig.height=12}
+```{r plot, echo=F, eval=FALSE, message=FALSE,fig.height=12}
 cells_with_long_records<-
   model_prediction %>% 
   group_by(cellID) %>% 
@@ -94,7 +94,7 @@ model_prediction %>%
 
 Maps of spatial parameters in the model.  
 
-```{r compare_data, echo=F, eval=TRUE, warning=F, message=FALSE}
+```{r compare_data, echo=F, eval=FALSE, warning=F, message=FALSE}
 
 rast <- projectRaster(spatial_outputs,crs = "+proj=merc +a=6378137 +b=6378137 +lat_ts=0 +lon_0=0 +x_0=0 +y_0=0 +k=1 +units=m +nadgrids=@null +wktext +no_defs +type=crs")
 
